// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoadingScreen /> If Not Loading should not render: loading:false 1`] = `
<LoadingScreen
  loading={false}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`<LoadingScreen /> When Loading should render properly: loading:true 1`] = `
<LoadingScreen
  loading={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;
